--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,16 @@
-*.gem
-*.rbc
-.bundle
-.config
-.yardoc
-Gemfile.lock
-InstalledFiles
-_yardoc
-coverage
-doc/
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
+/.bundle
+/.env
+/.gemset
+/.import
+/.rvmrc
+/.rspec
+/.sublime*
 
-.gemset
-.rspec
-.rvmrc
-.import/
-.sublime*
-.wiprc
+/log/*.log
+/pkg/*
+/tmp/*
+
+/spec/dummy/db/*.sqlite3
+/spec/dummy/log/*.log
+/spec/dummy/tmp/
+/spec/dummy/.sass-cache
